--- a/inclusive-web/package.json
+++ b/inclusive-web/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.17.0",
     "firebase": "^8.2.6",
+    "material-ui-phone-number": "^2.2.6",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
