--- a/inclusive-web/package.json
+++ b/inclusive-web/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-loading-skeleton": "^2.2.0",
+    "react-markdown": "^6.0.2",
     "react-moment": "^1.1.1",
     "react-phone-number-input": "^3.1.10",
     "react-redux": "^7.2.2",
@@ -34,6 +35,7 @@
     "react-virtualized": "^9.22.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "remark-gfm": "^1.0.0",
     "swiper": "^6.4.15",
     "web-vitals": "^0.2.4"
   },
