--- a/inclusivo-app/app/build.gradle
+++ b/inclusivo-app/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "com.dsciiita.inclusivo"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 9
-        versionName "4.0.0"
+        versionCode 11
+        versionName "4.2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -89,6 +89,10 @@ dependencies {
 
     //youtube videos
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+
+    //showcaseview
+    implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4'
+
 
 
 }
