--- a/inclusivo-app/app/src/main/AndroidManifest.xml
+++ b/inclusivo-app/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.dsciiita.inclusivo">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -13,7 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Inclusivo">
-        <activity android:name=".activities.AboutUsActivity"></activity>
+        <activity android:name=".activities.NotificationPreferencesActivity"></activity>
+        <activity android:name=".activities.EventInfoActivity" />
+        <activity android:name=".activities.SettingsActivity" />
+        <activity android:name=".activities.SavedItemsActivity" />
+        <activity android:name=".activities.AboutUsActivity" />
         <activity android:name=".activities.BlogListingActivity" />
         <activity android:name=".activities.VideoListActivity" />
         <activity
