--- a/inclusivo-app/app/src/main/AndroidManifest.xml
+++ b/inclusivo-app/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Inclusivo">
-        <activity android:name=".activities.NotificationPreferencesActivity"></activity>
+        android:theme="@style/Theme.Inclusivo"
+        android:fullBackupContent="@xml/backup_descriptor">
+        <activity android:name=".activities.NotificationPreferencesActivity" />
         <activity android:name=".activities.EventInfoActivity" />
         <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.SavedItemsActivity" />
@@ -25,8 +26,12 @@
         <activity android:name=".activities.VideoListActivity" />
         <activity
             android:name=".activities.VideoInfoActivity"
-            android:configChanges="orientation|screenSize" />
-        <activity android:name=".activities.OpenLinks">
+            android:configChanges="orientation|screenSize"
+            tools:targetApi="n" />
+
+        <activity android:name=".activities.OpenLinks"
+            android:launchMode="singleTask"
+            android:parentActivityName=".activities.NavigationActivity">
             <intent-filter
                 android:autoVerify="true"
                 tools:targetApi="m">
@@ -37,6 +42,7 @@
 
                 <data
                     android:host="inclusivo.netlify.app"
+                    android:pathPrefix="/home"
                     android:scheme="https" />
             </intent-filter>
         </activity>
