--- a/inclusive-web/package.json
+++ b/inclusive-web/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-share": "^4.4.0",
     "react-spinners": "^0.10.6",
     "react-swiper": "^0.1.5",
     "react-virtualized": "^9.22.3",
