--- a/inclusivo-api/app.yaml
+++ b/inclusivo-api/app.yaml
@@ -6,6 +6,8 @@ handlers:
 # static directory.
 - url: /static
   static_dir: static/
+  http_headers:
+    Access-Control-Allow-Origin: '*'
 # This handler routes all requests not caught above to the main app. 
 # It is required when static routes are defined, but can be omitted 
 # (along with the entire handlers section) when there are no static 
